--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "@libsql/client": "^0.14.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
-    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/bcryptjs": "^2.4.6",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.19.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17"
   }
 }
