--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "jose": "^6.0.10",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
