--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "drizzle-orm": "^0.39.3",
     "jose": "^6.0.10",
     "next": "^15.2.4",
+    "next-qrcode": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
