--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.17",
     "@types/bcryptjs": "^2.4.6",
-    "drizzle-kit": "^0.18.1",
+    "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.1.4"
   }
 }
