--- a/package.json
+++ b/package.json
@@ -7,28 +7,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
-    "jose": "^6.0.10",
-    "next": "^15.2.4",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.17",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/bcryptjs": "^2.4.6",
-    "autoprefixer": "^10.4.21",
-    "drizzle-kit": "^0.31.0",
+    "babel-jest": "^29.7.0",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
