--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "jose": "^6.0.10",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -28,6 +29,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/bcryptjs": "^2.4.6",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9",
@@ -36,7 +38,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "next-test-api-route-handler": "^4.0.16",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "web-streams-polyfill": "^4.1.0"
   }
 }
