--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@libsql/client": "^0.14.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "jest-fetch-mock": "^3.0.3",
