--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "drizzle-kit": "^0.18.1",
     "eslint": "^9",
